--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,13 @@ xgboost
 scikit-learn
 requests
 python-dotenv
+streamlit>=1.32.0
+pandas>=1.5.0
+matplotlib>=3.7.0
+python-dotenv>=1.0.0
+langchain>=0.1.17
+langchain-community>=0.0.32
+langchain-experimental>=0.0.51
+openai>=1.30.0
+tiktoken>=0.5.1
+
